# haskell-project-template

./: README.md  haskell-project-template.cabal
app/: Main.hs
src/: ProjectModule.hs
test/: ProjectModuleSpec.hs
