name:                haskell-project-template
version:             0.1.0.0
homepage:            https://github.com/tomcjohn/haskell-project-template
author:              Tom John
maintainer:          tomcjohn@gmail.com
copyright:           private
--category:            Games
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ProjectModule
  build-depends:       base >= 4.8 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates

executable haskell-project-template-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.8 && < 5
                     , haskell-project-template
  default-language:    Haskell2010

test-suite haskell-project-template-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , haskell-project-template
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -threaded -rtsopts -with-rtsopts=-N
  other-modules:       ProjectModuleSpec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tomcjohn/haskell-project-template
